refactored some quiz routes and logic, topic, and forums.
- added on delete cascade for some entities that did not have it.

- added searching by title starting with for forum controllers

- updated children comment dto to use projections